--- a/styles.css
+++ b/styles.css
@@ -315,19 +315,19 @@ div.bottom > svg{
 /* footer css */
 
 
-.contact-info{ 
+footer.contact-info{ 
     text-align: center;
     width: 100vw;
     height: auto;
     background-color:aliceblue;
 }
 
-.contact-info > *{
+footer.contact-info > *{
     box-sizing: border-box;
     padding: 3rem 1rem;
 }
 
-.contact-info > ul{
+footer.contact-info > ul{
     list-style: none;
     list-style-type: none;
     gap: 2rem;
@@ -335,12 +335,12 @@ div.bottom > svg{
 }
 
 
-.contact-info span{
+footer.contact-info span{
     display: block;
 }
 
 
-.contact-icons > li > a > svg{
+ul.contact-icons > li > a > svg{
     width: 35px;
     height: 35px;
 }
