--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,6 @@ body{
     overflow-x: hidden;
 }
 
-/* font-family: 'Kalnia', serif;
-font-family: 'Open Sans', sans-serif;
-font-family: 'Roboto', sans-serif;
- */
 
 :root{
     --bg-gradient: linear-gradient(135deg, #0c134f, #1D267D, #5C469C);
@@ -101,6 +97,16 @@ nav ul li:hover{
     }
 }
 
+.logo{
+    height: 100%;
+    width: auto;
+}
+
+.logo > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
   
 .hero-banner{
     width: 100vw;
@@ -373,6 +379,16 @@ nav ul li:hover{
     list-style: none;
     padding: 0;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .first-container .lists, .third-container .lists{
+    align-items: flex-end;
+  }
+
+  .third-container h3{
+    text-align: right;
   }
 
   .lists li{
@@ -447,9 +463,6 @@ nav ul li:hover{
   span{
       font-family: 'Kalnia', serif;
       font-size: 1.25em;
-  }
-  .skills-content{
-    margin: 0 auto 0 2.5rem;
   }
 
 }
